--- a/_config.yml
+++ b/_config.yml
@@ -89,7 +89,7 @@ analytics:
 # Site Author
 author:
   name             : "hyuki"
-  avatar           : "/assets/images/hyuki-profile.png"
+  avatar           : "/images/assets/hyuki-profile.jpg"
   bio              : "차근히 쌓아갈 것 입니다."
   location         : "South Korea"
   email            :
