--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ teaser                   : # path of fallback teaser image, e.g. "/assets/images
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 breadcrumbs              : # false # true, false (default)
-words_per_minute         : # 200
+words_per_minute         : 200
 
 
 comments:
@@ -96,7 +96,7 @@ author:
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      url: "hkj5455@gmail.com"
+      url: "mailto:hkj5455@gmail.com"
     - label: "Website"
       icon: "fas fa-fw fa-link"
       # url: "https://your-website.com"
@@ -271,6 +271,18 @@ defaults:
       layout: single
       author_profile: true
       read_time: true
-      comments: # true
+      comments: true
       share: true
       related: true
+  
+  #_pages
+  - scope:
+      path: ""
+      type: pages
+     values:
+      layout: single
+      author_profile: true
+      read_time: false
+      comments: false
+      share: true
+      related: false
