--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,3 +8,14 @@ main:
   #   url: /collection-archive/
   # - title: "Sitemap"
   #   url: /sitemap/
+
+docs:
+  - title: Algorithm
+    url: /docs/algorithm/
+  
+  - title: test
+    children:
+      - title: test1
+        url: /docs/test1/
+      - title: test2
+        url: /docs/test2
