--- a/_config.yml
+++ b/_config.yml
@@ -268,6 +268,8 @@ defaults:
       share: true
       related: true
       sidebar_main: true
+      toc_ads: true
+      toc_sticky: true
   
  # _pages
   - scope:
